rpi5/audiobookshelf/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: buffering
spec:
  buffering:
    maxRequestBodyBytes: 1048576
