rpi5/audiobookshelf/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: audiobookshelf
  labels:
    app: audiobookshelf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: audiobookshelf
  serviceName: audiobookshelf
  template:
    metadata:
      name: audiobookshelf
      annotations:
        linkerd.io/inject: "enabled"
      labels:
        app: audiobookshelf
    spec:
      containers:
        - name: audiobookshelf
          image: ghcr.io/advplyr/audiobookshelf:2.37.1@sha256:581d68b2a6fc7ebf58d81c878a9f387cbbc0d88ac9d37b298b9cee10168af85b
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              protocol: TCP
              name: http
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /metadata
              name: metadata
            - name: audiobooks
              mountPath: /audiobooks
          resources:
            requests:
              cpu: 100m
              memory: 500Mi
            limits:
              memory: 4Gi
          readinessProbe:
            httpGet:
              port: http
              path: /
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 10
          securityContext:
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
            privileged: false
            allowPrivilegeEscalation: false
      restartPolicy: Always
      volumes:
        - name: audiobooks
          hostPath:
            path: /data/AudioBooks
      securityContext:
        fsGroup: 3002
        runAsGroup: 3002
        runAsUser: 2001
        runAsNonRoot: true
  volumeClaimTemplates:
    - metadata:
        name: config
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
    - metadata:
        name: metadata
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
