rpi5/audiobookshelf/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: audiobookshelf
spec:
  selector:
    app: audiobookshelf
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
  type: ClusterIP
