rpi5/audiobookshelf/ingress-public.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: audiobookshelf-public
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`audiobookshelf.anshulg.direct`) || Host(`abs.anshulg.direct`)
      services:
        - name: audiobookshelf
          port: 80
      middlewares:
        - name: buffering
  tls:
    secretName: audiobookshelf-public-cert-tls
    domains:
      - main: audiobookshelf.anshulg.direct
        sans:
          - abs.anshulg.direct
